--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@ function render(){
   var list=document.getElementById('list');list.innerHTML='';
   var q=(document.getElementById('q').value||'').toLowerCase();
 
-  // pinned を上に並べる
-  var sorted=[...notes].sort((a,b)=>{
+  // ★ ピン留めを上に
+  let sorted=[...notes].sort((a,b)=>{
     if(a.pinned && !b.pinned) return -1;
     if(!a.pinned && b.pinned) return 1;
-    return (b.date||"").localeCompare(a.date||""); // 日付で降順
+    return new Date(b.date)-new Date(a.date);
   });
 
   sorted.forEach(n=>{
@@ -353,34 +353,24 @@ function render(){
     var div=document.createElement('div');div.className='note';
     var header=document.createElement('div');header.className='note-header';
 
-    // 選択チェック
     var chk=document.createElement('input');chk.type='checkbox';chk.checked=selectedIds.has(n.id);
     chk.onchange=function(e){toggleSelect(n.id,chk);e.stopPropagation();};
+    header.appendChild(chk);
 
-    // ピン留めアイコン
     var pin=document.createElement('span');
-    pin.textContent=n.pinned ? "★" : "☆";
-    pin.style.cursor="pointer";
-    pin.onclick=function(e){
-      e.stopPropagation();
-      n.pinned=!n.pinned;
-      saveNotes(); render();
-    };
+    pin.textContent=n.pinned?"★":"☆";
+    pin.style.cursor="pointer";pin.style.color=n.pinned?"#f39c12":"#aaa";
+    pin.onclick=function(e){e.stopPropagation();n.pinned=!n.pinned;saveNotes();render();};
+    header.appendChild(pin);
 
     var title=document.createElement('h3');title.textContent=n.title||"(無題)";
-    header.appendChild(chk);header.appendChild(pin);header.appendChild(title);
-    div.appendChild(header);
+    header.appendChild(title);div.appendChild(header);
 
     var meta=document.createElement('small');meta.textContent=n.date+"（"+n.cat+"）";div.appendChild(meta);
     var p=document.createElement('p');p.textContent=n.notes||"";div.appendChild(p);
 
     div.ondblclick=function(){openEditorById(n.id);};
-    div.onclick=function(e){
-      if(e.target.tagName!=="INPUT" && e.target.tagName!=="SPAN"){
-        toggleSelect(n.id,chk);
-        chk.checked=selectedIds.has(n.id);
-      }
-    };
+    div.onclick=function(e){if(e.target.tagName!=="INPUT"&&e.target!==pin){toggleSelect(n.id,chk);chk.checked=selectedIds.has(n.id);}};
     list.appendChild(div);
   });
   renderCategories();
@@ -397,22 +387,49 @@ function renderCategories(){
     var del=document.createElement("span");del.textContent="×";del.className="del-btn";del.onclick=function(e){e.stopPropagation();if(confirm(cat+" を削除しますか？")){categories=categories.filter(c=>c!==cat);saveCategories();renderCategories();}};li.appendChild(del);
     li.onclick=function(){setCategory(cat);};list.appendChild(li);
   });
-  var sel=document.getElementById("fCat");sel.innerHTML="";categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;sel.appendChild(o);});
-  var msel=document.getElementById("mCat");msel.innerHTML="";categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;msel.appendChild(o);});
+  var sel=document.getElementById("fCat");sel.innerHTML="";
+  categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;sel.appendChild(o);});
+  var msel=document.getElementById("mCat");msel.innerHTML="";
+  categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;msel.appendChild(o);});
+}
+
+/* ===== サイドバー toggle ===== */
+function toggleCats(){
+  const sidebar=document.querySelector(".sidebar");
+  const overlay=document.getElementById("sidebarOverlay");
+  const isOpen=sidebar.classList.toggle("show");
+  if(isOpen){overlay.classList.add("show");}else{overlay.classList.remove("show");}
 }
 
 /* ===== カテゴリ操作 ===== */
 function setCategory(cat){currentCategory=cat;render();}
-function addCategory(){var v=document.getElementById("newCat").value.trim();if(!v)return;if(categories.includes(v)){alert("既に存在します");return;}categories.push(v);saveCategories();renderCategories();document.getElementById("newCat").value="";}
-function editCategory(oldName){var newName=prompt("新しいカテゴリ名:",oldName);if(!newName||newName.trim()==="")return;newName=newName.trim();if(categories.includes(newName)){alert("既に存在します");return;}categories=categories.map(c=>c===oldName?newName:c);notes.forEach(n=>{if(n.cat===oldName)n.cat=newName;});saveCategories();saveNotes();render();}
+function addCategory(){
+  var v=document.getElementById("newCat").value.trim();
+  if(!v)return;
+  if(categories.includes(v)){alert("既に存在します");return;}
+  categories.push(v);saveCategories();renderCategories();
+  document.getElementById("newCat").value="";
+}
+function editCategory(oldName){
+  var newName=prompt("新しいカテゴリ名:",oldName);
+  if(!newName||newName.trim()==="")return;
+  newName=newName.trim();
+  if(categories.includes(newName)){alert("既に存在します");return;}
+  categories=categories.map(c=>c===oldName?newName:c);
+  notes.forEach(n=>{if(n.cat===oldName)n.cat=newName;});
+  saveCategories();saveNotes();render();
+}
 
 /* ===== 選択削除 ===== */
 function toggleSelect(id,chk){if(selectedIds.has(id))selectedIds.delete(id);else selectedIds.add(id);}
-function deleteSelected(){if(selectedIds.size===0){alert("削除対象がありません");return;}if(confirm("選択したノートを削除しますか？")){notes=notes.filter(n=>!selectedIds.has(n.id));selectedIds.clear();saveNotes();render();}}
+function deleteSelected(){if(selectedIds.size===0){alert("削除対象がありません");return;}
+  if(confirm("選択したノートを削除しますか？")){
+    notes=notes.filter(n=>!selectedIds.has(n.id));selectedIds.clear();saveNotes();render();
+  }}
 
 /* ===== エディタ ===== */
 function openEditor(n){
-  current = n || {id:Date.now(), date:todayStr(), cat:categories[0]||"daily", title:'', notes:'', pinned:false};
+  current=n||{id:Date.now(),date:todayStr(),cat:categories[0]||"daily",title:'',notes:''};
   if(window.innerWidth<=600){
     document.getElementById('mDate').value=current.date;
     document.getElementById('mCat').value=current.cat;
@@ -441,7 +458,7 @@ function saveNote(){
   saveNotes();render();closeEditor();
 }
 function saveMobileNote(){
-  if(!current){current={id:Date.now(),pinned:false};notes.unshift(current);}
+  if(!current){current={id:Date.now()};notes.unshift(current);}
   current.date=document.getElementById('mDate').value;
   current.cat=document.getElementById('mCat').value;
   current.title=document.getElementById('mTitle').value;
@@ -452,21 +469,25 @@ function saveMobileNote(){
 }
 
 /* ===== Ex/Import ===== */
-function exportNotes(){var data=JSON.stringify(notes,null,2);var blob=new Blob([data],{type:"application/json"});var url=URL.createObjectURL(blob);var a=document.createElement("a");var d=new Date(),fn="notes-"+d.getFullYear()+"-"+("0"+(d.getMonth()+1)).slice(-2)+"-"+("0"+d.getDate()).slice(-2)+".json";a.href=url;a.download=fn;document.body.appendChild(a);a.click();document.body.removeChild(a);URL.revokeObjectURL(url);}
+function exportNotes(){var data=JSON.stringify(notes,null,2);
+  var blob=new Blob([data],{type:"application/json"});
+  var url=URL.createObjectURL(blob);var a=document.createElement("a");
+  var d=new Date(),fn="notes-"+d.getFullYear()+"-"+("0"+(d.getMonth()+1)).slice(-2)+"-"+("0"+d.getDate()).slice(-2)+".json";
+  a.href=url;a.download=fn;document.body.appendChild(a);a.click();document.body.removeChild(a);URL.revokeObjectURL(url);
+}
 function importNotes(e){
   var file=e.target.files[0]; if(!file) return;
   var reader=new FileReader();
   reader.onload=function(evt){
-    try{
+    try {
       var imported=JSON.parse(evt.target.result);
-      if(imported && imported.length){
-        imported.forEach(n=>{ if(notes.some(x=>x.id===n.id)){ n.id=Date.now()+Math.floor(Math.random()*10000);} });
+      if(imported&&imported.length){
+        imported.forEach(n=>{if(notes.some(x=>x.id===n.id)){n.id=Date.now()+Math.floor(Math.random()*10000);}});
         if(confirm("既存のノートに追加しますか？\nキャンセル = 中止")){
-          notes=notes.concat(imported);
-          saveNotes();render();alert("インポート完了！");
+          notes=notes.concat(imported);saveNotes();render();alert("インポート完了！");
         }
       }
-    }catch(err){alert("インポート失敗: "+err.message);}
+    } catch(err){alert("インポート失敗: "+err.message);}
   };
   reader.readAsText(file);
 }
@@ -477,8 +498,6 @@ function toggleTheme(){theme=(theme==="light")?"dark":"light";document.body.clas
 
 /* ===== ユーティリティ ===== */
 function todayStr(){var d=new Date();return d.getFullYear()+"-"+("0"+(d.getMonth()+1)).slice(-2)+"-"+("0"+d.getDate()).slice(-2);}
-
-/* ===== 初期化 ===== */
 function init(){document.body.className=theme;loadNotes();loadCategories();render();}
 init();
 
@@ -489,32 +508,25 @@ init();
   function getClientWidth(){return document.documentElement.clientWidth||document.body.clientWidth;}
   function getScrollTop(){return document.documentElement.scrollTop||document.body.scrollTop;}
   function centerDialog(){
-    var w=getClientWidth();
-    var dw=dlg.offsetWidth||520;
+    var w=getClientWidth();var dw=dlg.offsetWidth||520;
     var left=Math.max(10,Math.floor((w-dw)/2));
     var top=getScrollTop()+80;
-    dlg.style.left=left+"px";
-    dlg.style.top=top+"px";
+    dlg.style.left=left+"px";dlg.style.top=top+"px";
   }
   window.centerDialog=centerDialog;
   header.onmousedown=function(e){
-    dragging=true; startX=e.clientX; startY=e.clientY;
-    startLeft=dlg.offsetLeft; startTop=dlg.offsetTop;
+    dragging=true;startX=e.clientX;startY=e.clientY;
+    startLeft=dlg.offsetLeft;startTop=dlg.offsetTop;
     document.onmousemove=function(e2){
       if(!dragging)return;
-      var dx=e2.clientX-startX;
-      var dy=e2.clientY-startY;
-      dlg.style.left=(startLeft+dx)+"px";
-      dlg.style.top=(startTop+dy)+"px";
+      var dx=e2.clientX-startX;var dy=e2.clientY-startY;
+      dlg.style.left=(startLeft+dx)+"px";dlg.style.top=(startTop+dy)+"px";
     };
-    document.onmouseup=function(){
-      dragging=false; document.onmousemove=null; document.onmouseup=null;
-    };
+    document.onmouseup=function(){dragging=false;document.onmousemove=null;document.onmouseup=null;};
   };
-  window.onresize=function(){ if(dlg.style.display==='block' && !dragging){ centerDialog(); } };
+  window.onresize=function(){if(dlg.style.display==='block'&&!dragging){centerDialog();}};
 })();
 </script>
-
 
 </body>
 </html>
