--- a/index.html
+++ b/index.html
@@ -116,53 +116,63 @@
   }
   .modal-footer { text-align:right; }
 
-  /* ===== モバイル用エディタ ===== */
-  .mobile-editor {
-    position: fixed;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    transition: left 0.3s ease;
-    z-index: 3000;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-  }
-  .mobile-editor.show { left: 0; }
+ /* ===== モバイル用エディタ ===== */
+.mobile-editor {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  transition: left 0.3s ease;
+  z-index: 3000;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+.mobile-editor.show { left: 0; }
 
-  .mobile-editor .editor-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px;
-    background: #4a90e2;
-    color: #fff;
-    font-weight: bold;
-  }
-  .mobile-editor .editor-header button {
-    background: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 4px 8px;
-  }
-  .mobile-editor .editor-content {
-    flex: 1;
-    padding: 16px;
-    overflow-y: auto;
-    background: #fff;
-    box-sizing: border-box;
-  }
-  .mobile-editor .editor-content input,
-  .mobile-editor .editor-content textarea,
-  .mobile-editor .editor-content select {
-    display:block;
-    width: 100%; max-width:100%;
-    margin-bottom: 12px; padding: 10px;
-    border: 1px solid #cfd8e3; border-radius: 6px;
-    font-size: 14px; box-sizing: border-box;
-  }
+.mobile-editor .editor-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  background: #4a90e2;
+  color: #fff;
+  font-weight: bold;
+}
+.mobile-editor .editor-header button {
+  background: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 4px 8px;
+}
+.mobile-editor .editor-content {
+  flex: 1;
+  padding: 16px;
+  overflow-y: auto;
+  background: #fff;
+  box-sizing: border-box;
+}
+.mobile-editor .editor-content input,
+.mobile-editor .editor-content textarea,
+.mobile-editor .editor-content select {
+  display:block;
+  width: 100%;
+  max-width:100%;
+  margin-bottom: 12px;
+  padding: 10px;
+  border: 1px solid #cfd8e3;
+  border-radius: 6px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
+/* 日付入力欄も幅100%に強制 */
+.mobile-editor .editor-content input[type="date"] {
+  width: 100% !important;
+}
+
 
   /* ===== 検索ボックスの幅調整 ===== */
   @media screen and (max-width:600px) {
