--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 </div>
 
 <!-- 情報＆検索 -->
-<div id="infoPanel">右上の「＋」でノート作成できます。チェックをつけて「del」で一括削除できます。</div>
+<div id="infoPanel">「＋」でノート作成できます。チェックをつけて「del」で一括削除できます。</div>
 <div id="filterPanel"><input type="text" id="q" placeholder="検索したいワード" onkeyup="render()"></div>
 
 <!-- ===== 2カラム ===== -->
