--- a/index2.html
+++ b/index2.html
@@ -117,13 +117,19 @@
   .modal-footer { text-align:right; }
 
   /* ===== export設定用モーダル ===== */
-  #exportDlg {
-  display:none; position:fixed; top:50%; left:50%;
+ #exportDlg {
+  display:none;
+  position:fixed;
+  top:50%; left:50%;
   transform:translate(-50%,-50%);
-  background:#fff; border:1px solid #ccc; border-radius:10px;
-  padding:20px; z-index:4000;
+  background:#fff;
+  border:1px solid #ccc;
+  border-radius:10px;
+  padding:20px;
+  z-index:4000;
   box-shadow:0 8px 20px rgba(0,0,0,.3);
 }
+
 
 
  /* ===== モバイル用エディタ ===== */
